--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,8 +4,10 @@ on:
   push:
     branches:
       - main
+
 permissions:
   contents: write
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -13,6 +15,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Set GITHUB_ACTIONS environment variable
+        run: echo "GITHUB_ACTIONS=true" >> $GITHUB_ENV
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
